--- a/docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
+++ b/docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
@@ -289,6 +289,7 @@ form input.form-submit { /* Forced by Fusion */
   border-bottom: 0 none;
   margin-bottom: 0;
   padding-bottom: 10px;
+  padding-left: 0;
   position: relative;
   clear: both;
 }
